--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,13 +1,13 @@
 <section class="hero is-fullheight has-text-centered" id="contact">
     <div class="hero-body">
         <div class="container">
-            {% unless site.facebook_username == %}
+<!--             {% unless site.facebook_username == %}
             <a id="contact-button" href="https://m.me/{{site.facebook_username}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
                 <i class="fab fa-facebook-messenger"></i>Ping me on Messenger
             </a>
-            {% endunless %}
+            {% endunless %} -->
             {% unless site.email == %}
             <a id="contact-button" href="mailto:{{site.email}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
@@ -15,19 +15,19 @@
                 <i class="fas fa-envelope"></i>Send me an Email
             </a>
             {% endunless %}
-            {% unless site.twitter_username == %}
+<!--             {% unless site.twitter_username == %}
             <a id="contact-button" href="https://www.twitter.com/intent/tweet?screen_name={{site.twitter_username}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
                 <i class="fab fa-twitter"></i>Tweet me on Twitter
             </a>
-            {% endunless %}
+            {% endunless %} -->
             <hr>
             <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
                 You Can find me here
             </h3>
             <div class="column is-full is-size-3">
-                {% unless site.facebook_username == %}
+<!--                 {% unless site.facebook_username == %}
                 <a href="http://www.facebook.com/{{site.facebook_username}}" target="_blank" class="has-text-black"><i class="fab fa-facebook"></i></a>
                 {% endunless %}
                 {% unless site.twitter_username == %}
@@ -35,14 +35,14 @@
                 {% endunless %}
                 {% unless site.instagram_username ==  %}
                 <a href="http://www.instagram.com/{{site.instagram_username}}" target="_blank" class="has-text-black"><i class="fab fa-instagram"></i></a>
-                {% endunless %}
+                {% endunless %} -->
                 {% unless site.linkedin_username ==  %}
                 <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-black"><i class="fab fa-linkedin"></i></a>
                 {% endunless %}
                 {% unless site.github_username ==  %}
                 <a href="http://www.github.com/{{site.github_username}}" target="_blank" class="has-text-black"><i class="fab fa-github"></i></a>
                 {% endunless %}
-                {% unless site.youtube_channel_id ==  %}
+<!--                 {% unless site.youtube_channel_id ==  %}
                 <a href="http://www.youtube.com/channel/{{site.youtube_channel_id}}" target="_blank" class="has-text-black"><i class="fab fa-youtube"></i></a>
                 {% endunless %}
                 {% unless site.reddit_username ==  %}
@@ -56,7 +56,7 @@
                 {% endunless %}
                 {% unless site.spotify_username ==  %}
                 <a href="http://open.spotify.com/user/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
-                {% endunless %}
+                {% endunless %} -->
             </div>
         </div>
     </div>
