--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@ layout: compress
   {% include about.html %}
   {% include contact.html %}
   <!--Footer begins here-->
-  {% include footer.html %}
+<!--   {% include footer.html %} -->
 </body>
 <script>
   var navItems = document.getElementsByClassName('navbar-item');
