--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ layout: compress
   {% include navbar.html %}
   {% include showcase.html %}
   {% include about.html %}
+  {% include projects.html %}
   {% include contact.html %}
 </body>
 <script>
