--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,10 @@
-<div class="hero-body">
-  <div class="container has-text-centered">
-    <div class="section">
-      <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Projects</p>
+<section class="hero is-fullheight" id="projects">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="section">
+        <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Projects</p>
+      </div>
+      {% include project-card.html %}
     </div>
-    {% include project-card.html %}
   </div>
-</div>
+</section>
