--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,7 +1,6 @@
 <div class="columns is-centered is-multiline is-mobile">
   {% for project in site.data.projects %}
-    <div class="column has-text-centered is-paddingless is-marginless is-narrow">
-      id="project-card">
+    <div class="column has-text-centered is-paddingless is-marginless is-narrow" id="project-card">
       <a href="{{project.link}}" target="_blank">
       <div class="has-background-black card">
         <figure class="image is-3by1" style="background-image: url({{project.image}});">
