--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,6 +1,6 @@
 <div class="columns is-centered is-multiline is-mobile">
   {% for project in site.data.projects %}
-    <div class="column has-text-centered is-paddingless is-marginless is-variable is-1-mobile is-0-tablet is-3-desktop is-8-widescreen is-2-fullhd is-one-third-widescreen is-one-third-desktop is-one-fifth-fullhd is-one-third-tablet is-two-fifths-mobile is-three-quarters-touch" id="project-card">
+    <div class="column has-text-centered" id="project-card">
       <a href="{{project.link}}" target="_blank">
       <div class="has-background-black card">
         <figure class="image is-3by1" style="background-image: url({{project.image}});">
