--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -3,7 +3,7 @@
     <div class="column is-paddingless is-one-third-widescreen is-one-third-desktop is-one-fifth-fullhd is-one-third-tablet is-two-fifths-mobile is-three-quarters-touch" id="project-card">
       <a href="{{project.link}}" target="_blank">
       <div class="has-background-black card">
-        <figure class="image is-3by2" style="background-image: url({{project.image}});">
+        <figure class="image is-3by2 is-fullwidth" style="background-image: url({{project.image}});">
         </figure>
         <div class="card-content">
           <h1 class="title has-text-white is-size-4">{{ project.name }}</h1>
