--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,13 +1,13 @@
 <div class="columns is-centered is-multiline is-mobile">
   {% for project in site.data.projects %}
-    <div class="column is-paddingless is-one-third-widescreen is-one-third-desktop is-one-fifth-fullhd is-one-third-tablet is-two-fifths-mobile is-three-quarters-touch" style="align-items: flex-start;" id="project-card">
+    <div class="column is-paddingless is-one-third-widescreen is-one-third-desktop is-one-fifth-fullhd is-one-third-tablet is-two-fifths-mobile is-three-quarters-touch" id="project-card">
       <a href="{{project.link}}" target="_blank">
       <div class="has-background-black card">
-        <figure class="image is-3by2 is-flex is-align-items-center is-justify-content-center" style="background-image: url({{project.image}});">
+        <figure class="image is-3by2" style="background-image: url({{project.image}});">
         </figure>
         <div class="card-content">
           <h1 class="title has-text-white is-size-4">{{ project.name }}</h1>
-          <p class="has-text-white has-text-weight-light content">{{ project.description}}</p>
+          <p class="has-text-white has-text-weight-light content">{{ project.description | truncate: 100}}</p>
         </div>
       </div>
       </a>
