Add projects css config

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,7 +257,7 @@ a.navbar-item.is-active {
     }
 }
 
-#project {
+#projects {
     .columns {
         .column {
             border-radius: 0.5rem;
