--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -273,7 +273,7 @@ a.navbar-item.is-active {
         -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
         -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
         box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
-        transform: scale(1);
+        transform: scale(0.95);
         transition: all 0.5s ease;
         margin-bottom: 0.5rem !important;
         display: inline-table;
@@ -283,6 +283,7 @@ a.navbar-item.is-active {
     }
     .card {
         transition: all 0.25s ease;
+        height: 100%;
         &:hover {
             background-color: rgba($color: #000000, $alpha: 0.90)!important;
         }
