--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -276,7 +276,8 @@ a.navbar-item.is-active {
         transform: scale(0.95);
         transition: all 0.5s ease;
         margin-bottom: 0.5rem !important;
-        display: inline-flex;
+        display: inline-table;
+        min-height: 100%
         &:hover {
             transform: scale(0.975);
         }
