--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -277,7 +277,7 @@ a.navbar-item.is-active {
         transition: all 0.5s ease;
         margin-bottom: 0.5rem !important;
         display: inline-table;
-        min-height: 100%
+        min-height: 100%;
         &:hover {
             transform: scale(0.975);
         }
