--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -260,7 +260,7 @@ a.navbar-item.is-active {
 #projects {
     .columns {
         .column {
-            display: flex;
+            Align-items: stretch;
             border-radius: 0.5rem;
             .image {
                 background-position: center;
