--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -283,6 +283,7 @@ a.navbar-item.is-active {
     }
     .card {
         transition: all 0.25s ease;
+        height: 100%;
         &:hover {
             background-color: rgba($color: #000000, $alpha: 0.90)!important;
         }
